# CommunityIPTVPlayer

./: .gitignore  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  vite.config.ts
.github/workflows/: tauri-release.yml
api/: proxy.ts  proxyShared.ts  restreamHandler.ts  restreamManager.ts  stream.ts  tsconfig.json
api/restream/: [...path].ts
public/: manifest.webmanifest  sw.js
scripts/: gen-pwa-icons.ps1  prepare-tauri-sidecars.mjs  set-version.mjs
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cast.rs  lib.rs  relay.rs
src/components/browse/: CatchupBrowser.tsx  ChannelList.tsx  ContentCard.tsx  ContentGrid.tsx  FilterBar.tsx  SearchBar.tsx  SeriesBrowser.tsx
src/components/layout/: Header.tsx  SearchOverlay.tsx  SectionTabs.tsx  Sidebar.tsx
src/hooks/: useActivePlaylist.ts  useBackendConnection.ts  useChromecast.ts  useContinueWatching.ts  useDebouncedValue.ts  useFavorites.ts  useInfiniteList.ts  useInstallAppPrompt.ts  useLocalStorageState.ts  usePlayer.ts  usePlaylistFilter.ts  usePlaylistImport.ts  useRecents.ts
src/types/: models.ts  player.ts
src/utils/: backendBackup.ts  classifyPlaylistItem.ts  downloadStream.ts  exportM3u.ts  grouping.ts  httpsCapability.ts  indexedDb.ts  loadPlaylistSource.ts  parseM3u.ts  proxyUrl.ts  recentItems.ts  relayDiscovery.ts  search.ts  secureUrl.ts  shareId.ts  storage.ts  time.ts  watchUrl.ts  xtream.ts  xtreamStreamUrl.ts
(+16 files in other folders)
